--- a/01_combine_finance_stock_data.ipynb
+++ b/01_combine_finance_stock_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.0.163:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.0.163:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -307,10 +307,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x206fcb5cb88>"
+       "<pyspark.sql.session.SparkSession at 0x1629c91a148>"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,28 +323,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = time.time()\n",
-    "df_all = spark.read.csv(combine_data_folder + \"*/*\", header=True, dateFormat=\"yyyy-MM-dd\")"
+    "df_all = spark.read.csv(combine_data_folder + \"*/*\", header=True, dateFormat=\"yyyy-MM-dd\", inferSchema=True)\n",
+    "df_all = df_all.withColumnRenamed(\"ticker_x\", \"ticker\") \\\n",
+    "               .drop(\"ticker_y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import to_date\n",
+    "\n",
+    "df_all = df_all.withColumn(\"cik\", df_all[\"cik\"].cast(IntegerType())) \\\n",
+    "               .withColumn('bs_qtrs', df_all['bs_qtrs'].cast(IntegerType())) \\\n",
+    "               .withColumn('cf_qtrs', df_all['cf_qtrs'].cast(IntegerType())) \\\n",
+    "               .withColumn('is_qtrs', df_all['is_qtrs'].cast(IntegerType())) \\\n",
+    "               .withColumn('period_day_of_week', df_all['period_day_of_week'].cast(IntegerType())) \\\n",
+    "               .withColumn('period_day_of_month', df_all['period_day_of_month'].cast(IntegerType())) \\\n",
+    "               .withColumn('period_day_of_year', df_all['period_day_of_year'].cast(IntegerType())) \\\n",
+    "               .withColumn('period_week_of_year', df_all['period_week_of_year'].cast(IntegerType())) \\\n",
+    "               .withColumn('period_month_of_year', df_all['period_month_of_year'].cast(IntegerType())) \\\n",
+    "               .withColumn('day_of_week', df_all['day_of_week'].cast(IntegerType())) \\\n",
+    "               .withColumn('day_of_month', df_all['day_of_month'].cast(IntegerType())) \\\n",
+    "               .withColumn('day_of_year', df_all['day_of_year'].cast(IntegerType())) \\\n",
+    "               .withColumn('week_of_year', df_all['week_of_year'].cast(IntegerType())) \\\n",
+    "               .withColumn('month_of_year', df_all['month_of_year'].cast(IntegerType())) \\\n",
+    "                .withColumn('Assets', df_all['Assets'].cast(DoubleType())) \\\n",
+    "                .withColumn('AssetsNoncurrent', df_all['AssetsNoncurrent'].cast(DoubleType())) \\\n",
+    "                .withColumn('AssetsCurrent', df_all['AssetsCurrent'].cast(DoubleType())) \\\n",
+    "                .withColumn('Liabilities', df_all['Liabilities'].cast(DoubleType())) \\\n",
+    "                .withColumn('LiabilitiesNoncurrent', df_all['LiabilitiesNoncurrent'].cast(DoubleType())) \\\n",
+    "                .withColumn('LiabilitiesCurrent', df_all['LiabilitiesCurrent'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_Equity', df_all['c_Equity'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_RetainedEarnings', df_all['c_RetainedEarnings'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_CashIncreaseDecrease', df_all['c_CashIncreaseDecrease'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_CashFromOperating', df_all['c_CashFromOperating'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_CashFromInvesting', df_all['c_CashFromInvesting'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_CashFromFinancing', df_all['c_CashFromFinancing'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_PaymentsOfDividendsTotal', df_all['c_PaymentsOfDividendsTotal'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_PaymentsForRepurchaseOfStockTotal', df_all['c_PaymentsForRepurchaseOfStockTotal'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_Revenues', df_all['c_Revenues'].cast(DoubleType())) \\\n",
+    "                .withColumn('GrossProfit', df_all['GrossProfit'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_OperatingIncomeLoss', df_all['c_OperatingIncomeLoss'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_NetIncomeLoss', df_all['c_NetIncomeLoss'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_workcapToAssets', df_all['r_workcapToAssets'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_currentRatio', df_all['r_currentRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_deptToEquity', df_all['r_deptToEquity'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_deptRatio', df_all['r_deptRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_netProfitMargin', df_all['r_netProfitMargin'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_operatingMargin', df_all['r_operatingMargin'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_netIncomeMargin', df_all['r_netIncomeMargin'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_cashGenPowerRatio', df_all['r_cashGenPowerRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_extFinancingIndexRatio', df_all['r_extFinancingIndexRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_returnOnEquity', df_all['r_returnOnEquity'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_returnOnAssets', df_all['r_returnOnAssets'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_assetsTurnoverRatio', df_all['r_assetsTurnoverRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_dividendPayoutRatio', df_all['r_dividendPayoutRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_stockRepurchaseRatio', df_all['r_stockRepurchaseRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_operatingCashFlowRatio', df_all['r_operatingCashFlowRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_assetEfficiencyRatio', df_all['r_assetEfficiencyRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_currentLiabCoverageRatio', df_all['r_currentLiabCoverageRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_longtermDeptCoverageRatio', df_all['r_longtermDeptCoverageRatio'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_revenue_n', df_all['gr_revenue_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_revenue_p', df_all['gr_revenue_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_grosspr_n', df_all['gr_grosspr_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_grosspr_p', df_all['gr_grosspr_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_opiincome_n', df_all['gr_opiincome_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_opiincome_p', df_all['gr_opiincome_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_netincome_n', df_all['gr_netincome_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_netincome_p', df_all['gr_netincome_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_earnings_n', df_all['gr_earnings_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_earnings_p', df_all['gr_earnings_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_equity_n', df_all['gr_equity_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_equity_p', df_all['gr_equity_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_asscur_n', df_all['gr_asscur_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_asscur_p', df_all['gr_asscur_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_assnoncur_n', df_all['gr_assnoncur_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_assnoncur_p', df_all['gr_assnoncur_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_liabcur_n', df_all['gr_liabcur_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_liabcur_p', df_all['gr_liabcur_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_liabnoncur_n', df_all['gr_liabnoncur_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_liabnoncur_p', df_all['gr_liabnoncur_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_cashfrominv_n', df_all['gr_cashfrominv_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_cashfrominv_p', df_all['gr_cashfrominv_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_cashfromfin_n', df_all['gr_cashfromfin_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_cashfromfin_p', df_all['gr_cashfromfin_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_cashfromope_n', df_all['gr_cashfromope_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_cashfromope_p', df_all['gr_cashfromope_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_dividends_n', df_all['gr_dividends_n'].cast(DoubleType())) \\\n",
+    "                .withColumn('gr_dividends_p', df_all['gr_dividends_p'].cast(DoubleType())) \\\n",
+    "                .withColumn('fp__FY', df_all['fp__FY'].cast(DoubleType())) \\\n",
+    "                .withColumn('fp__Q1', df_all['fp__Q1'].cast(DoubleType())) \\\n",
+    "                .withColumn('fp__Q2', df_all['fp__Q2'].cast(DoubleType())) \\\n",
+    "                .withColumn('fp__Q3', df_all['fp__Q3'].cast(DoubleType())) \\\n",
+    "                .withColumn('fp__Q4', df_all['fp__Q4'].cast(DoubleType())) \\\n",
+    "                .withColumn('year', df_all['year'].cast(DoubleType())) \\\n",
+    "                .withColumn('Open', df_all['Open'].cast(DoubleType())) \\\n",
+    "                .withColumn('High', df_all['High'].cast(DoubleType())) \\\n",
+    "                .withColumn('Low', df_all['Low'].cast(DoubleType())) \\\n",
+    "                .withColumn('Close', df_all['Close'].cast(DoubleType())) \\\n",
+    "                .withColumn('Volume', df_all['Volume'].cast(DoubleType())) \\\n",
+    "                .withColumn('close_norm', df_all['close_norm'].cast(DoubleType())) \\\n",
+    "                .withColumn('high_norm', df_all['high_norm'].cast(DoubleType())) \\\n",
+    "                .withColumn('low_norm', df_all['low_norm'].cast(DoubleType())) \\\n",
+    "                .withColumn('open_norm', df_all['open_norm'].cast(DoubleType())) \\\n",
+    "                .withColumn('volume_norm', df_all['volume_norm'].cast(DoubleType())) \\\n",
+    "                .withColumn('close_chg', df_all['close_chg'].cast(DoubleType())) \\\n",
+    "                .withColumn('volume_chg', df_all['volume_chg'].cast(DoubleType())) \\\n",
+    "                .withColumn('pr_p2e', df_all['pr_p2e'].cast(DoubleType())) \\\n",
+    "                .withColumn('pr_p2b', df_all['pr_p2b'].cast(DoubleType())) \\\n",
+    "                .withColumn('pr_p2egr_1y', df_all['pr_p2egr_1y'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_max_10day', df_all['c_max_10day'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_potential', df_all['r_potential'].cast(DoubleType())) \\\n",
+    "                .withColumn('period', to_date(df_all['period'], 'yyyy-MM-dd')) \\\n",
+    "                .withColumn('filed', to_date(df_all['filed'], 'yyyy-MM-dd')) \\\n",
+    "                .withColumn('Date', to_date(df_all['Date'], 'yyyy-MM-dd')) \\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import col\n",
-    "df_all_partioned = df_all.repartition(16, col(\"ticker_x\"))\n",
+    "\n",
+    "shutil.rmtree(trainingset_folder + \"/all_combine_data\", ignore_errors = True)\n",
+    "\n",
+    "df_all_partioned = df_all.repartition(16, col(\"ticker\"))\n",
     "df_all_partioned.write.parquet(trainingset_folder + \"/all_combine_data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
