--- a/04_train_with_more_companies.ipynb
+++ b/04_train_with_more_companies.ipynb
@@ -1112,18 +1112,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 99_stop spark"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
-    "selection_2018 = groups_2018[5].ticker.unique().tolist()"
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XX_Trials"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1177,7 +1196,12 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1193,13 +1217,6 @@
    "source": [
     "df_top500_2018_neg_pred = df_top500_2018[df_top500_2018.prediction < 0]\n",
     "draw_box([df_top500_2018_neg_pred],['2018 neg predictions'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## XX_Trials"
    ]
   },
   {
