--- a/05_GRU_Trials.ipynb
+++ b/05_GRU_Trials.ipynb
@@ -1,22 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "based on https://blog.floydhub.com/gru-with-pytorch/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "wicked-county",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from typing import List, Tuple, Union, Set\n",
+    "import numpy as np\n",
     "\n",
-    "import numpy as np"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "import torch\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sufficient-zambia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +35,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is Cuda installed:  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch.cuda.is_available() checks and returns a Boolean True if a GPU is available, else it'll return False\n",
+    "is_cuda = torch.cuda.is_available()\n",
+    "\n",
+    "# If we have a GPU available, we'll set our device to GPU. We'll use this device variable later in our code.\n",
+    "if is_cuda:\n",
+    "    device = torch.device(\"cuda\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "print(\"Is Cuda installed: \", is_cuda)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "affected-catering",
    "metadata": {},
    "source": [
     "## 00_Tools"
@@ -36,7 +69,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "discrete-olympus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "noticed-space",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +107,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "three-detective",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +116,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revised-settle",
    "metadata": {},
    "source": [
     "## 01_Basics"
@@ -95,7 +124,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "brief-beach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +170,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "municipal-netherlands",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "legal-smith",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +201,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "italic-buyer",
    "metadata": {},
    "outputs": [
     {
@@ -197,30 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "incredible-order",
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MinMaxScaler()"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "reports_features_scaler = MinMaxScaler()\n",
-    "reports_features_scaler.fit(reports_df[features_reports])"
+    "reports_features_scaler.fit(reports_df[features_reports])\n",
+    "\n",
+    "labels_scaler = MinMaxScaler()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "massive-doubt",
    "metadata": {},
    "source": [
     "### Params"
@@ -228,32 +241,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "equal-internet",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "nr_of_features = len(features_reports)\n",
-    "lookback_size = 8"
+    "lookback_size = 8\n",
+    "\n",
+    "batch_size = 64"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "electrical-positive",
    "metadata": {},
    "source": [
     "## 02_build dataset\n",
-    "\n",
-    "- sec daten history\n",
-    "- stockdaten\n",
-    "- neue features\n",
-    "- industrie / sektor"
+    "Prepare the train and testdata.<br>\n",
+    "Out of the financial data from the reports sequences of 8 reports are created and then matched based on the filed date of the latest report in the sequence. This one will be refered to as \"series_x\" in the code. <br>\n",
+    "Furthermore, the features of the historical stockdata are combined with the data read from the \"add_info\". These will be refered as \"features_x\".<br>\n",
+    "So for every day that there are 61 'tabular' features (historical stockdata and add_info) and a sequence of data from 8 reports with 46 features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "japanese-video",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,8 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "lonely-burke",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,8 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "color-economy",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,8 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "polar-entrepreneur",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,8 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "searching-impossible",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,8 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "smart-florida",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,8 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "committed-sudan",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,50 +466,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "special-onion",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A,AAL,AAPL,ABBV,ABC,ABMD,ABT,ACAD,ACGL,ACN,ADBE,ADI,ADP,ADSK,AES,AFL,AGNC,AIG,AJG,AKAM,ALB,ALGN,ALL,ALLE,ALNY,ALV,ALXN,AMAT,AMD,AME,AMED,AMGN,AMH,AMP,AMT,AMZN,ANSS,AOS,APD,APH,APO,ARE,ARMK,ATO,ATR,ATVI,AVB,AVGO,AVY,AWK,AZPN,BA,BAC,BAH,BAX,BBY,BDX,BEN,BFAM,BG,BIIB,BIO,BK,BLK,BLL,BMRN,BMY,BR,BRKR,BRO,BSX,BURL,BWA,BX,BXP,C,CAG,CAH,CAT,CBOE,CCC,CCI,CCK,CCL,CDNS,CDW,CE,CERN,CF,CHD,CHGG,CHRW,CHTR,CI,CINF,CL,CLX,CMCSA,CME,CMG,CMI,CMS,CNA,CNC,CNP,COF,COO,COST,CPB,CPRT,CPT,CQP,CREE,CRM,CSCO,CSL,CSX,CTAS,CTSH,CTXS,CVS,CVX,CXO,CZR,D,DAL,DAR,DE,DECK,DFS,DG,DGX,DHI,DHR,DIS,DISCA,DISH,DLB,DLR,DLTR,DNKN,DOV,DOW,DPZ,DRE,DRI,DTE,DUK,DVA,DXCM,EA,EBAY,ECL,ED,EFX,EIX,EL,ELS,EMN,EMR,ENPH,ENTG,EOG,EPAM,EPD,EQIX,EQR,ERIE,ESS,ETR,EW,EXAS,EXC,EXPD,EXPE,EXR,FANG,FAST,FATE,FB,FBHS,FCX,FDS,FDX,FE,FFIV,FICO,FIS,FITB,FIVE,FLEX,FLT,FMC,FSLR,FTNT,GGG,GILD,GIS,GM,GNRC,GNTX,GPC,GPN,GPS,GRMN,GS,GWRE,GWW,HAL,HAS,HBAN,HCA,HD,HDS,HEI,HES,HIG,HLT,HOLX,HON,HPQ,HRL,HSIC,HSY,HUM,HZNP,IBKR,IBM,IDXX,IEP,IEX,IFF,ILMN,INCY,INTC,INTU,IP,IPG,IPGP,IR,IRM,ISRG,IT,IVZ,JAZZ,JBHT,JCI,JKHY,JNJ,JPM,K,KEY,KKR,KLAC,KMB,KMI,KO,KSU,L,LAMR,LDOS,LEA,LEN,LH,LII,LKQ,LLY,LMT,LNC,LNG,LNT,LOGI,LOW,LPLA,LRCX,LULU,LUV,LVS,LYB,LYV,MA,MAR,MAS,MASI,MCD,MCHP,MCK,MCO,MDLZ,MELI,MET,MGM,MHK,MKC,MKL,MKSI,MKTX,MLM,MMC,MMM,MO,MOH,MORN,MPC,MPLX,MPW,MPWR,MRK,MRTX,MRVL,MS,MSCI,MSFT,MSI,MTB,MTD,MTN,MU,MXIM,NBIX,NCLH,NDAQ,NDSN,NEE,NEM,NFLX,NKE,NLY,NOW,NRG,NSC,NTAP,NTRS,NUAN,NUE,NVAX,NVDA,NVR,NWL,NWS,NYT,O,OC,ODFL,OKE,OMC,ORCL,ORLY,OXY,PANW,PAYX,PCAR,PCG,PEG,PEGA,PENN,PEP,PFE,PFG,PG,PGR,PH,PKG,PKI,PM,PNC,PNW,PODD,POOL,PPG,PPL,PRU,PSA,PTC,PWR,QCOM,RARE,RE,REGN,RF,RGA,RGEN,RH,RJF,RMD,RNG,RNR,ROK,ROL,ROP,ROST,RPM,RSG,SAM,SBAC,SBUX,SCCO,SCHW,SCI,SE,SEIC,SGEN,SHW,SIRI,SIVB,SJM,SLB,SMG,SNA,SNPS,SPG,SPLK,SRE,SRPT,SSNC,STLD,STT,STX,STZ,SUI,SWK,SYK,SYY,TAL,TAP,TDG,TDY,TEL,TER,TFX,TGT,TIF,TJX,TMO,TMUS,TREX,TRMB,TROW,TRV,TSCO,TSLA,TSN,TTC,TTWO,TWTR,TXN,TXT,TYL,UAL,UDR,UHAL,UHS,ULTA,UNH,UNP,UPS,URI,USB,V,VAR,VEEV,VFC,VLO,VMC,VRSK,VRSN,VRTX,VTR,VZ,WAB,WCN,WDAY,WDC,WEC,WEX,WFC,WHR,WLK,WM,WMB,WMT,WPC,WSM,WSO,WST,WU,WY,WYNN,XEL,XLNX,XOM,XPO,XRAY,XYL,Y,ZNGA,ZTS,(488112, 8, 46)\n",
-      "(488112, 61)\n",
-      "(488112,)\n",
-      "(347354, 8, 46)\n",
-      "(347354, 61)\n",
-      "(347354,)\n",
-      "492\n"
+      "AAPL,MSFT,Train Series   :  (2025, 8, 46)\n",
+      "Train Features :  (2025, 61)\n",
+      "Train Label    :  (2025,)\n",
+      "Test  Series   :  (1440, 8, 46)\n",
+      "Test  Features :  (1440, 61)\n",
+      "Test  Label    :  (1440,)\n",
+      "Test  Parts    :  2\n"
      ]
     }
    ],
    "source": [
-    "train_series_x, train_features_x, train_y, test_series_x, test_features_x, test_y, test_pd_list = build_train_testset(tickers_to_process_all)\n",
-    "print(train_series_x.shape)\n",
-    "print(train_features_x.shape)\n",
-    "print(train_y.shape)\n",
-    "print(test_series_x.shape)\n",
-    "print(test_features_x.shape)\n",
-    "print(test_y.shape)\n",
-    "print(len(test_pd_list))\n",
+    "train_series_x, train_features_x, train_y, test_series_x, test_features_x, test_y, test_pd_list = \\\n",
+    "    build_train_testset(tickers_to_process_test)\n",
+    "\n",
+    "print(\"Train Series   : \", train_series_x.shape)\n",
+    "print(\"Train Features : \", train_features_x.shape)\n",
+    "print(\"Train Label    : \", train_y.shape)\n",
+    "print(\"Test  Series   : \", test_series_x.shape)\n",
+    "print(\"Test  Features : \", test_features_x.shape)\n",
+    "print(\"Test  Label    : \", test_y.shape)\n",
+    "print(\"Test  Parts    : \", len(test_pd_list))\n",
     "\n",
     "# Todo: Label skalieren / jeden 2. löschen"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "sealed-courtesy",
    "metadata": {},
    "source": [
-    "## label am schluss skalieren !"
+    "### Scale the labels"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "minute-resistance",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_y = np.hstack((train_y, test_y))\n",
+    "labels_scaler.fit(all_y.reshape(-1,1))\n",
+    "\n",
+    "train_y = labels_scaler.transform(train_y.reshape(-1,1)).ravel()\n",
+    "test_y  = labels_scaler.transform(test_y.reshape(-1,1)).ravel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reduce trainset\n",
+    "in general, neighboring points are very similar since only the stock price change and all other data (add_info, series of fundamental data) stay the same. So using just half of the points should accelerate the training process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1013,)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_series_x   = train_series_x[::2]\n",
+    "train_features_x = train_features_x[::2]\n",
+    "train_y          = train_y[::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = TensorDataset(torch.from_numpy(train_series_x), torch.from_numpy(train_features_x), torch.from_numpy(train_y))\n",
+    "train_loader = DataLoader(train_data, shuffle=True, batch_size=batch_size, drop_last=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 03_Define Model\n",
+    "https://discuss.pytorch.org/t/combine-two-model-on-pytorch/47858/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XX_Trials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +617,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "electoral-essex",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +637,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "impossible-camcorder",
    "metadata": {},
    "outputs": [
     {
@@ -732,17 +823,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "paperback-irrigation",
-   "metadata": {},
-   "source": [
-    "## XX_Trials"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "binary-monroe",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +854,6 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "raising-montana",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +878,6 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "illegal-karaoke",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +898,6 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "trained-airplane",
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +919,6 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "graphic-advertiser",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +940,6 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "contemporary-smooth",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +961,6 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "center-contractor",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1171,6 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "above-domestic",
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1203,6 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "agricultural-suffering",
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1224,6 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "correct-indonesia",
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2226,6 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "herbal-module",
    "metadata": {},
    "outputs": [
     {
@@ -3157,7 +3229,6 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "other-mongolia",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3165,7 +3236,6 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "detailed-ability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3187,7 +3257,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "atmospheric-flight",
    "metadata": {},
    "outputs": [
     {
@@ -3274,7 +3343,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "macro-poison",
    "metadata": {},
    "source": [
     "### reshaping"
@@ -3283,7 +3351,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "still-stuff",
    "metadata": {},
    "outputs": [
     {
@@ -3313,7 +3380,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "fewer-celtic",
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3401,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "union-parameter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3346,7 +3411,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "sublime-judges",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3357,7 +3421,6 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "foster-tourist",
    "metadata": {},
    "outputs": [
     {
@@ -3408,7 +3471,6 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "enormous-munich",
    "metadata": {},
    "outputs": [
     {
@@ -3460,7 +3522,6 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "competitive-optimum",
    "metadata": {},
    "outputs": [
     {
@@ -3487,7 +3548,6 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "about-removal",
    "metadata": {},
    "outputs": [
     {
@@ -3513,7 +3573,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "breeding-audio",
    "metadata": {},
    "outputs": [
     {
@@ -3540,7 +3599,6 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "dietary-connectivity",
    "metadata": {},
    "outputs": [
     {
@@ -3567,7 +3625,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accepted-heaven",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3589,7 +3646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
