Gru_Model ready for training

--- a/05_train_with_history_gru.ipynb
+++ b/05_train_with_history_gru.ipynb
@@ -9,29 +9,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from typing import List, Tuple, Union, Set\n",
     "import numpy as np\n",
+    "import time\n",
+    "import os\n",
     "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "from torch.utils.data import TensorDataset, DataLoader\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "trainingset_folder = \"D:/data_mt/09_training/\"\n",
     "stock_data_folder = trainingset_folder + \"stocks/\"\n",
-    "stock_potential_folder = trainingset_folder + \"stocks_w_potential/\""
+    "stock_potential_folder = trainingset_folder + \"stocks_w_potential/\"\n",
+    "gru_model_folder = \"D:/data_mt/09_training/gru_model/\""
    ]
   },
   {
@@ -271,6 +275,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "def save_scaler(scaler, filename):\n",
+    "    joblib.dump(scaler, filename) \n",
+    "    \n",
+    "def load_scaler(filename):\n",
+    "    return joblib.load(filename) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -474,26 +493,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AAPL,MSFT,Train Series   :  (2025, 8, 46)\n",
-      "Train Features :  (2025, 61)\n",
-      "Train Label    :  (2025,)\n",
-      "Test  Series   :  (1440, 8, 46)\n",
-      "Test  Features :  (1440, 61)\n",
-      "Test  Label    :  (1440,)\n",
-      "Test  Parts    :  2\n"
+      "A,AAL,AAPL,ABBV,ABC,ABMD,ABT,ACAD,ACGL,ACN,ADBE,ADI,ADP,ADSK,AES,AFL,AGNC,AIG,AJG,AKAM,ALB,ALGN,ALL,ALLE,ALNY,ALV,ALXN,AMAT,AMD,AME,AMED,AMGN,AMH,AMP,AMT,AMZN,ANSS,AOS,APD,APH,APO,ARE,ARMK,ATO,ATR,ATVI,AVB,AVGO,AVY,AWK,AZPN,BA,BAC,BAH,BAX,BBY,BDX,BEN,BFAM,BG,BIIB,BIO,BK,BLK,BLL,BMRN,BMY,BR,BRKR,BRO,BSX,BURL,BWA,BX,BXP,C,CAG,CAH,CAT,CBOE,CCC,CCI,CCK,CCL,CDNS,CDW,CE,CERN,CF,CHD,CHGG,CHRW,CHTR,CI,CINF,CL,CLX,CMCSA,CME,CMG,CMI,CMS,CNA,CNC,CNP,COF,COO,COST,CPB,CPRT,CPT,CQP,CREE,CRM,CSCO,CSL,CSX,CTAS,CTSH,CTXS,CVS,CVX,CXO,CZR,D,DAL,DAR,"
      ]
     }
    ],
    "source": [
     "train_series_x, train_features_x, train_y, test_series_x, test_features_x, test_y, test_pd_list = \\\n",
-    "    build_train_testset(tickers_to_process_test)\n",
+    "    build_train_testset(tickers_to_process_all)\n",
     "\n",
     "print(\"Train Series   : \", train_series_x.shape)\n",
     "print(\"Train Features : \", train_features_x.shape)\n",
@@ -536,29 +549,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1013,)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_series_x   = train_series_x[::2]\n",
     "train_features_x = train_features_x[::2]\n",
-    "train_y          = train_y[::2]"
+    "train_y          = train_y[::2].reshape(-1,1) # the model output will produce a 2dim array with just one column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,10 +578,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gru_input_dim = nr_of_features # 46\n",
+    "gru_hidden_dim = 128\n",
+    "gru_output_dim = gru_input_dim\n",
+    "gru_n_layers   = 2\n",
+    "\n",
+    "feat_input_dim = len(tabular_features)\n",
+    "feat_hidden_dim = 128\n",
+    "feat_output_dim = len(tabular_features)\n",
+    "\n",
+    "combine_hidden_dim = 32\n",
+    "combine_output_dim = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# as defined in https://blog.floydhub.com/gru-with-pytorch/\n",
+    "class GRUNet(nn.Module):\n",
+    "    def __init__(self, input_dim, hidden_dim, output_dim, n_layers, drop_prob=0.2):\n",
+    "        super(GRUNet, self).__init__()\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.n_layers = n_layers\n",
+    "        \n",
+    "        self.gru = nn.GRU(input_dim, hidden_dim, n_layers, batch_first=True, dropout=drop_prob)\n",
+    "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        \n",
+    "    def forward(self, x, h):\n",
+    "        out, h = self.gru(x, h)\n",
+    "        out = self.fc(self.relu(out[:,-1]))\n",
+    "        return out, h\n",
+    "    \n",
+    "    def init_hidden(self, batch_size):\n",
+    "        weight = next(self.parameters()).data\n",
+    "        hidden = weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().to(device)\n",
+    "        return hidden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrainNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(TrainNet, self).__init__()\n",
+    "        \n",
+    "        self.series_model = GRUNet(gru_input_dim, gru_hidden_dim, gru_output_dim, gru_n_layers)\n",
+    "        self.current_h_data = None\n",
+    "        \n",
+    "        self.features_model = nn.Sequential(\n",
+    "            nn.Linear(feat_input_dim, feat_hidden_dim),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(feat_hidden_dim, feat_output_dim),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "        \n",
+    "        self.combine_model = nn.Sequential(\n",
+    "            nn.Linear(feat_output_dim + gru_output_dim, combine_hidden_dim),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(combine_hidden_dim, combine_output_dim),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "        \n",
+    "        \n",
+    "    def init_hidden(self, batch_size):\n",
+    "        self.current_h_data = self.series_model.init_hidden(batch_size).data\n",
+    "\n",
+    "\n",
+    "    def forward(self, series_data, features_data):\n",
+    "        series_x, h  = self.series_model(series_data, self.current_h_data)\n",
+    "        features_x   = self.features_model(features_data)\n",
+    "\n",
+    "        self.current_h_data = h.data\n",
+    "        \n",
+    "        # print(series_x.size())\n",
+    "        # print(series_x.size())\n",
+    "        \n",
+    "        x = torch.cat((series_x, features_x), 1)\n",
+    "        x = self.combine_model(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fragen:\n",
+    "- warum wird h im TrainLoop hidden in jeder Epoche neu initialisiert? Warum erfolgt das nicht nur ausserhalb?\n",
+    "- wozu ist h überhaupt da"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 04_Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(train_loader, learn_rate, save_path = None, EPOCHS=5):\n",
+    "    model = TrainNet()\n",
+    "    \n",
+    "    model.to(device)\n",
+    "    \n",
+    "    criterion = nn.MSELoss()\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=learn_rate)\n",
+    "    \n",
+    "    print(\"Starting Training of model\")\n",
+    "    model.train()\n",
+    "    \n",
+    "    epoch_times = []\n",
+    "    total_loss_list = []\n",
+    "    avg_loss_list = []\n",
+    "    # Start training loop\n",
+    "    for epoch in range(1,EPOCHS+1):\n",
+    "        start_time = time.perf_counter()\n",
+    "        model.init_hidden(batch_size)\n",
+    "        \n",
+    "        total_loss = 0.\n",
+    "        counter = 0\n",
+    "        \n",
+    "        for series_x, features_x, label in train_loader:\n",
+    "            counter += 1\n",
+    "            model.zero_grad()\n",
+    "            \n",
+    "            out = model(series_x.to(device).float(), features_x.to(device).float())\n",
+    "            \n",
+    "            #print(\"out:   \", out.size())\n",
+    "            #print(\"label: \", label.size())\n",
+    "            \n",
+    "            loss = criterion(out, label.to(device).float())\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            total_loss += loss.item()\n",
+    "            if counter%200 == 0:\n",
+    "                print(\"Epoch {}......Step: {}/{}....... Average Loss for Epoch: {}\".format(epoch, counter, len(train_loader), avg_loss/counter))\n",
+    "        \n",
+    "        current_time = time.perf_counter()\n",
+    "        avg_loss = total_loss / len(train_loader)\n",
+    "        avg_loss_list.append(avg_loss)\n",
+    "        total_loss_list.append(total_loss)\n",
+    "        \n",
+    "        print(\"Epoch {}/{} Done, Total Loss: {}\".format(epoch, EPOCHS, avg_loss ))\n",
+    "        print(\"Total Time Elapsed: {} seconds\".format(str(current_time-start_time)))\n",
+    "       \n",
+    "    epoch_times.append(current_time-start_time)\n",
+    "        \n",
+    "    if save_path is not None:\n",
+    "        # https://pytorch.org/tutorials/beginner/saving_loading_models.html\n",
+    "        torch.save(model.state_dict(), os.path.join(save_path, \"epoch_\" + str(epoch)+\".model\"))\n",
+    "        \n",
+    "    print(\"Total Training Time: {} seconds\".format(str(sum(epoch_times))))\n",
+    "    return model, avg_loss_list, total_loss_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Training of model\n",
+      "Epoch 1/3 Done, Total Loss: 0.07278750849266848\n",
+      "Total Time Elapsed: 0.12845849999939674 seconds\n",
+      "Epoch 2/3 Done, Total Loss: 0.004352485210013886\n",
+      "Total Time Elapsed: 0.12682220000169764 seconds\n",
+      "Epoch 3/3 Done, Total Loss: 0.0016458839837772152\n",
+      "Total Time Elapsed: 0.10793120000016643 seconds\n",
+      "Total Training Time: 0.10793120000016643 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_save_path = gru_model_folder + \"model_trial/\"\n",
+    "\n",
+    "if not os.path.exists(model_save_path):\n",
+    "    os.makedirs(model_save_path)\n",
+    "    \n",
+    "save_scaler(reports_features_scaler, model_save_path + \"feature_scaler.gz\")\n",
+    "save_scaler(labels_scaler, model_save_path + \"labels_scaler.gz\")\n",
+    "\n",
+    "lr = 0.001\n",
+    "train_model, avg_loss_list, total_loss_list = train(train_loader, lr, model_save_path, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.07278750849266848, 0.004352485210013886, 0.0016458839837772152]\n",
+      "[1.091812627390027, 0.0652872781502083, 0.024688259756658226]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(avg_loss_list)\n",
+    "print(total_loss_list)"
+   ]
   },
   {
    "cell_type": "markdown",
