--- a/06_prepare_robo_advisor_data.ipynb
+++ b/06_prepare_robo_advisor_data.ipynb
@@ -693,11 +693,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd_ra_data_df.sort_values(['ticker','Date']).to_csv(trainingset_folder + \"robo_train_set.csv\", header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(427917, 9)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd_ra_data_df.shape"
    ]
   },
   {
