cleaning up data preparation

--- a/01_02_b_combine_finance_stock_data.ipynb
+++ b/01_02_b_combine_finance_stock_data.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "combine the data from the historical stock prices, the company_reports and the additional company information into a single file for every stock.\n",
+    "Jupyter version, not parallelized"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,9 +40,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainingset_folder    = \"D:/data_mt/09_training/\"\n",
-    "stock_data_folder = trainingset_folder + \"stocks/\"\n",
-    "combine_data_folder = trainingset_folder + \"combined/\"\n",
+    "trainingset_folder = \"D:/data_mt/09_training/\"\n",
+    "\n",
+    "trainingset_robo_folder = \"D:/data_mt/09_training_robo/\"\n",
+    "stock_data_folder = trainingset_robo_folder + \"01_stocks_w_potential/\"\n",
+    "combine_data_folder = trainingset_robo_folder + \"02_combined_w_potential/\"\n",
+    "combine_data_file = trainingset_robo_folder + \"03_all_combine_data_w_potential\"\n",
     "\n",
     "overwrite = False"
    ]
@@ -96,7 +107,7 @@
    "outputs": [],
    "source": [
     "def load_stock_history(ticker:str):\n",
-    "    df =  pd.read_csv(trainingset_folder + \"/stocks/\" + ticker[0] + \"/\" + ticker + \".csv\")\n",
+    "    df =  pd.read_csv(stock_data_folder + ticker[0] + \"/\" + ticker + \".csv\")\n",
     "    df.Date = pd.to_datetime(df.Date)\n",
     "    return df"
    ]
@@ -278,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +302,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.0.163:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.0.163:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -307,10 +318,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x1629c91a148>"
+       "<pyspark.sql.session.SparkSession at 0x21df0fab188>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,22 +334,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_all = spark.read.csv(combine_data_folder + \"*/*\", header=True, dateFormat=\"yyyy-MM-dd\", inferSchema=True)\n",
-    "df_all = df_all.withColumnRenamed(\"ticker_x\", \"ticker\") \\\n",
+    "df_all = df_all.drop(\"ticker_x\") \\\n",
     "               .drop(\"ticker_y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import to_date\n",
+    "from pyspark.sql.types import *\n",
     "\n",
     "df_all = df_all.withColumn(\"cik\", df_all[\"cik\"].cast(IntegerType())) \\\n",
     "               .withColumn('bs_qtrs', df_all['bs_qtrs'].cast(IntegerType())) \\\n",
@@ -440,7 +452,9 @@
     "                .withColumn('pr_p2b', df_all['pr_p2b'].cast(DoubleType())) \\\n",
     "                .withColumn('pr_p2egr_1y', df_all['pr_p2egr_1y'].cast(DoubleType())) \\\n",
     "                .withColumn('c_max_10day', df_all['c_max_10day'].cast(DoubleType())) \\\n",
+    "                .withColumn('c_short_term_mean', df_all['c_short_term_mean'].cast(DoubleType())) \\\n",
     "                .withColumn('r_potential', df_all['r_potential'].cast(DoubleType())) \\\n",
+    "                .withColumn('r_short_term_potential', df_all['r_short_term_potential'].cast(DoubleType())) \\\n",
     "                .withColumn('period', to_date(df_all['period'], 'yyyy-MM-dd')) \\\n",
     "                .withColumn('filed', to_date(df_all['filed'], 'yyyy-MM-dd')) \\\n",
     "                .withColumn('Date', to_date(df_all['Date'], 'yyyy-MM-dd')) \\"
@@ -448,16 +462,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import col\n",
     "\n",
-    "shutil.rmtree(trainingset_folder + \"/all_combine_data\", ignore_errors = True)\n",
+    "shutil.rmtree(combine_data_file, ignore_errors = True)\n",
     "\n",
     "df_all_partioned = df_all.repartition(16, col(\"ticker\"))\n",
-    "df_all_partioned.write.parquet(trainingset_folder + \"/all_combine_data\")"
+    "df_all_partioned.write.parquet(combine_data_file)"
    ]
   },
   {
@@ -3492,6 +3506,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
