--- a/02_train_base_model.ipynb
+++ b/02_train_base_model.ipynb
@@ -37,11 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainingset_folder    = \"D:/data_mt/09_training/\"\n",
-    "stock_data_folder = trainingset_folder + \"stocks/\"\n",
-    "combine_data_folder = trainingset_folder + \"combined/\"\n",
+    "trainingset_folder = \"D:/data_mt/09_training/\"\n",
     "\n",
-    "combined_data_file = trainingset_folder + \"/all_combine_data\"\n",
+    "trainingset_robo_folder = \"D:/data_mt/09_training_robo/\"\n",
+    "stock_data_folder = trainingset_robo_folder + \"01_stocks_w_potential/\"\n",
+    "combine_data_folder = trainingset_robo_folder + \"02_combined_w_potential/\"\n",
+    "combine_data_file = trainingset_robo_folder + \"03_all_combine_data_w_potential\"\n",
     "\n",
     "model_folder = \"D:/data_mt/10_models/\"\n",
     "model_name   = \"02_base_model\""
@@ -377,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 05_Test and an do some primary analysis"
+    "## 05_Test and do some primary analysis"
    ]
   },
   {
@@ -1367,7 +1368,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
